--- a/Ödev 1/index.html
+++ b/Ödev 1/index.html
@@ -6,9 +6,15 @@
     <title>Burak Varolsun</title>
 </head>
 <body>
+    <!-- Ana başlık başlangıç -->
     <h1>Burak Varolsun</h1>
+    <!-- Ana başlık son -->
+    
+    <!-- Hakkımda bölümü başlangıç -->
     <h2>Hakkımda</h2>
     <p>Merhaba, ben Burak. Gitar çalmaktan ve video oyunları oynamaktan keyif alırım. Front-End alanına ilgi duyuyorum. Bu konuda kendimi geliştirmeye gayret ediyorum. 
     </p>
+    <!-- Hakkımda bölümü son -->
+    
 </body>
 </html>
